@@ -17,35 +17,37 @@
 
 ;;;
 (defvar ew-decode-field-syntax-alist
-'(("from"               ew-scan-unibyte-std11 . ew:tag-mailbox+)
-  ("sender"             ew-scan-unibyte-std11 . ew:tag-mailbox)
-  ("to"                 ew-scan-unibyte-std11 . ew:tag-address+)
-  ("resent-to"          ew-scan-unibyte-std11 . ew:tag-address+)
-  ("cc"                 ew-scan-unibyte-std11 . ew:tag-address+)
-  ("resent-cc"          ew-scan-unibyte-std11 . ew:tag-address+)
-  ("bcc"                ew-scan-unibyte-std11 . ew:tag-address*)
-  ("resent-bcc"         ew-scan-unibyte-std11 . ew:tag-address*)
-  ("message-id"         ew-scan-unibyte-std11)
-  ("resent-message-id"  ew-scan-unibyte-std11)
-  ("in-reply-to"        ew-scan-unibyte-std11 . ew:tag-phrase-msg-id*)
-  ("references"         ew-scan-unibyte-std11 . ew:tag-phrase-msg-id*)
-  ("keywords"           ew-scan-unibyte-std11 . ew:tag-phrase*)
-  ("subject"            ew-scan-unibyte-unstructured)
-  ("comments"           ew-scan-unibyte-unstructured)
-  ("encrypted"          ew-scan-unibyte-std11)
-  ("date"               ew-scan-unibyte-std11)
-  ("reply-to"           ew-scan-unibyte-std11 . ew:tag-address+)
-  ("received"           ew-scan-unibyte-std11)
-  ("resent-reply-to"    ew-scan-unibyte-std11 . ew:tag-address+)
-  ("resent-from"        ew-scan-unibyte-std11 . ew:tag-mailbox+)
-  ("resent-sender"      ew-scan-unibyte-std11 . ew:tag-mailbox)
-  ("resent-date"        ew-scan-unibyte-std11)
-  ("return-path"        ew-scan-unibyte-std11)
-  ("mime-version"       ew-scan-unibyte-std11)
-  ("content-type"       ew-scan-unibyte-mime)
-  ("content-transfer-encoding"  ew-scan-unibyte-mime)
-  ("content-id"         ew-scan-unibyte-mime)
-  ("content-description"        ew-scan-unibyte-unstructured)
+'((from                 ew-scan-unibyte-std11 . ew:tag-mailbox+)
+  (sender               ew-scan-unibyte-std11 . ew:tag-mailbox)
+  (to                   ew-scan-unibyte-std11 . ew:tag-address+)
+  (resent-to            ew-scan-unibyte-std11 . ew:tag-address+)
+  (cc                   ew-scan-unibyte-std11 . ew:tag-address+)
+  (resent-cc            ew-scan-unibyte-std11 . ew:tag-address+)
+  (bcc                  ew-scan-unibyte-std11 . ew:tag-address*)
+  (resent-bcc           ew-scan-unibyte-std11 . ew:tag-address*)
+  (message-id           ew-scan-unibyte-std11)
+  (resent-message-id    ew-scan-unibyte-std11)
+  (in-reply-to          ew-scan-unibyte-std11 . ew:tag-phrase-msg-id*)
+  (references           ew-scan-unibyte-std11 . ew:tag-phrase-msg-id*)
+  (keywords             ew-scan-unibyte-std11 . ew:tag-phrase*)
+  (subject              ew-scan-unibyte-unstructured)
+  (comments             ew-scan-unibyte-unstructured)
+  (encrypted            ew-scan-unibyte-std11)
+  (date                 ew-scan-unibyte-std11)
+  (reply-to             ew-scan-unibyte-std11 . ew:tag-address+)
+  (received             ew-scan-unibyte-std11)
+  (resent-reply-to      ew-scan-unibyte-std11 . ew:tag-address+)
+  (resent-from          ew-scan-unibyte-std11 . ew:tag-mailbox+)
+  (resent-sender        ew-scan-unibyte-std11 . ew:tag-mailbox)
+  (resent-date          ew-scan-unibyte-std11)
+  (return-path          ew-scan-unibyte-std11)
+  (mime-version         ew-scan-unibyte-std11)
+  (content-type         ew-scan-unibyte-mime)
+  (content-transfer-encoding    ew-scan-unibyte-mime)
+  (content-id           ew-scan-unibyte-std11)
+  (content-description  ew-scan-unibyte-unstructured)
+  (content-disposition  ew-scan-unibyte-mime)
+  (approved             ew-scan-unibyte-std11 . ew:tag-address+)
 ))
 
 (defvar ew-decode-field-default-syntax '(ew-scan-unibyte-unstructured))
